--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,5 @@ RoxygenNote: 7.2.3
 Depends: 
     R (>= 2.10)
 LazyData: true
+URL: https://github.com/twixson/nnadicTestData
+BugReports: https://github.com/twixson/nnadicTestData/issues
